is_debug = false
pdf_enable_v8 = false
pdf_use_skia = false
pdf_use_skia_paths = false
pdf_is_standalone = true
clang_use_chrome_plugins = false
is_component_build = false
pdf_is_complete_lib = true
use_custom_libcxx = false
use_rtti = true

use_system_libjpeg = false
use_system_libpng = false
use_system_lcms2 = false
use_system_libopenjpeg2 = false

use_sysroot = false
