is_debug = false
pdf_enable_v8 = false
pdf_use_skia = false
pdf_is_standalone = true
clang_use_chrome_plugins = false
is_component_build = false
pdf_is_complete_lib = true
use_custom_libcxx = false
use_blink = true
use_rtti = true
use_system_libjpeg = false
use_system_libpng = false
use_system_lcms2 = false
use_system_libopenjpeg2 = false
use_sysroot = false

use_goma = false
treat_warnings_as_errors = false
pdf_enable_xfa = false
ios_deployment_target = "13.0"
ios_enable_code_signing = false
pdf_use_partition_alloc = false

symbol_level = 0

target_os = "ios"

